bookinfo-sns/details-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: details
  labels:
    app: details
    version: v1
spec:
  replicas: 0
  selector:
    matchLabels:
      app: details
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: details
        version: v1
    spec:
      containers:
        - name: details
          image: docker.io/maistra/examples-bookinfo-details-v1:0.12.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9080
      labels:
        app: reviews
        version: v3
    spec:
      containers:
        - name: reviews
          image: docker.io/maistra/examples-bookinfo-reviews-v3:0.12.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9080
