bookinfo-sns/details-rollout.yaml
apiVersion: argoproj.io/v1alpha1 # Create a rollout resource
kind: Rollout
metadata:
  name: details
spec:
  replicas: 1
  selector:
    matchLabels:
      app: details
    #put values here
  workloadRef: # Reference an existing Deployment using workloadRef field
    apiVersion: apps/v1
    kind: Deployment
    name: details
  strategy:
    blueGreen:
      autoPromotionEnabled: false
      activeService: details-stable
      previewService: details-preview
      prePromotionAnalysis:
        templates:
          - templateName: details
          - templateName: prometheus-cpu-template
        args:
          - name: baseline-hash
            valueFrom:
              podTemplateHashValue: Stable
          - name: preview-hash
            valueFrom:
              podTemplateHashValue: Latest
          - name: servicename
            valueFrom:
              fieldRef:
                fieldPath: metadata.name
