bookinfo-sns/reviews-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reviews
  labels:
    app: reviews
    version: v3
spec:
  replicas: 0
  selector:
    matchLabels:
      app: reviews
  template:
    metadata:
      labels:
        app: reviews
        version: v3
    spec:
      containers:
        - name: reviews
          image: quay.io/opsmxpublic/reviews:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9080
