bookinfo-sns/details-preview.yaml
apiVersion: v1
kind: Service
metadata:
  name: details-preview
  labels:
    app: details
    service: details
spec:
  ports:
    - port: 9080
      name: http
  selector:
    app: details
