bookinfo-sns/details-stable.yaml
apiVersion: v1
kind: Service
metadata:
  name: details-stable
  labels:
    app: details
    service: details
spec:
  ports:
    - port: 9080
      name: http
  selector:
    app: details
