bookinfo-sns/productpage-preview.yaml
apiVersion: v1
kind: Service
metadata:
  name: productpage-preview
  labels:
    app: productpage
    service: productpage
spec:
  ports:
    - port: 9080
      name: http
  selector:
    app: productpage
    service: productpage
  type: ClusterIP
