bookinfo-sns/reviews-stable.yaml
apiVersion: v1
kind: Service
metadata:
  name: reviews-stable
  labels:
    app: reviews
    service: reviews
spec:
  ports:
    - port: 9080
      name: http
  selector:
    app: reviews
