bookinfo-sns/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-obs411-argocd
    kubernetes.io/ingress.class: nginx
  name: bookinfo-bl
spec:
  rules:
  - host: bookinfo-sns.aoa.oes.opsmx.org
    http:
      paths:
      - backend:
          service:
            name: productpage
            port:
              number: 9080
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - bookinfo-bl.aoa.oes.opsmx.org
    secretName: bookinfo-bl-tls-certificate
